--- a/informe.tex
+++ b/informe.tex
@@ -351,27 +351,27 @@ total & 1200  \\
   | >{\centering\arraybackslash}X 
   | >{\raggedleft\arraybackslash}X | }
  \hline
-Nro. de Agentes & Promedio & Desviación Estandar \\
+Nro. de Agentes & Promedio & Desviación Estándar \\
  \hline
-8 & 0 & 0 \\
+8 & 20.572 & 2.0435 \\
 \hline
-17 & 0 & 0 \\
+17 & 31.1336 & 1.0054 \\
 \hline
-26 & 0 & 0 \\
+26 & 47.343 & 2.243 \\
 \hline
-35 & 0 & 0 \\
+35 & 66.834 & 1.736 \\
 \hline
-44 & 0 & 0 \\
+44 & 93.247 & 2.837 \\
 \hline
-53 & 0 & 0 \\
+53 & 140.383 & 2.156 \\
 \hline
-62 & 0 & 0 \\
+62 & 171.759 & 4.647 \\
 \hline
-71 & 0 & 0 \\
+71 & 231.938 & 1.109 \\
 \hline
-80& 0 & 0 \\
+80& 270.878 & 3.671 \\
 \hline
-89 & 0 & 0 \\
+89 & 344.437 & 1.853 \\
 \hline
 
 \end{tabularx}
@@ -387,27 +387,27 @@ Nro. de Agentes & Promedio & Desviación Estandar \\
   | >{\centering\arraybackslash}X 
   | >{\raggedleft\arraybackslash}X | }
  \hline
-Nro. de Agentes & Promedio & Desviación Estandar \\
+Nro. de Agentes & Promedio & Desviación Estándar \\
  \hline
-8 & 0 & 0 \\
+8 & 13.5426 & 0.5934 \\
 \hline
-17 & 0 & 0 \\
+17 & 24.6086 & 0.5265 \\
 \hline
-26 & 0 & 0 \\
+26 & 41.1566 & 1.2136 \\
 \hline
-35 & 0 & 0 \\
+35 & 61.391 & 2.347 \\
 \hline
-44 & 0 & 0 \\
+44 & 84.637 & 2.968 \\
 \hline
-53 & 0 & 0 \\
+53 & 117.062 & 3.665 \\
 \hline
-62 & 0 & 0 \\
+62 & 165.062 & 3.357 \\
 \hline
-71 & 0 & 0 \\
+71 & 207.8574 & 2.347 \\
 \hline
-80& 0 & 0 \\
+80& 250.0566 & 2.025 \\
 \hline
-89 & 0 & 0 \\
+89 & 332.699 & 1.796 \\
 \hline
 
 \end{tabularx}
