mejora en nombre de las tablas

--- a/informe.tex
+++ b/informe.tex
@@ -287,8 +287,8 @@ texto
  Queueing  & 5  \\
 \hline
 \end{tabularx}
-\caption{Descripcion de la tabla}
-\label{referencia:5}
+\caption{Representación numérica de los estados en los archivos de salida}
+\label{Representación numérica de los estados en los archivos de salida}
 \end{center}
 \end{table}
 
@@ -316,7 +316,7 @@ dt2 & archivos generados \\
 \hline
 \end{tabularx}
 \caption{Implementación del Tiempo en el Main}
-\label{referencia:5}
+\label{Implementación del Tiempo en el Main}
 \end{center}
 \end{table}
 
@@ -345,7 +345,7 @@ p0y  & 0  \\
 \hline
 \end{tabularx}
 \caption{Parametros del módulo geometria aislado}
-\label{referencia:5}
+\label{Parametros del módulo geometria aislado}
 \end{center}
 \end{table}
 
@@ -368,7 +368,7 @@ total & 1200  \\
 \hline
 \end{tabularx}
 \caption{Parámetros del simulador integrado}
-\label{referencia:5}
+\label{Parámetros del simulador integrado}
 \end{center}
 \end{table}
 
@@ -403,8 +403,8 @@ Nro. de Agentes & Promedio & Desviación Estándar \\
 \hline
 
 \end{tabularx}
-\caption{tablaAntes}
-\label{table:tablaAntes}
+\caption{Tiempos de ejecución antes de las optimizaciones}
+\label{Tiempos de ejecución antes de las optimizaciones}
 \end{center}
 \end{table}
 
@@ -439,8 +439,8 @@ Nro. de Agentes & Promedio & Desviación Estándar \\
 \hline
 
 \end{tabularx}
-\caption{table:tablaDespues}
-\label{tablaDespues}
+\caption{Tiempos de ejecución después de las optimizaciones}
+\label{Tiempos de ejecución después de las optimizaciones}
 \end{center}
 \end{table}
 
